fix overflow bug

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -50,7 +50,7 @@ body {
 }
 
 main {
-  margin: 52px auto;
+  margin: 52px auto 0;
   width: 100vw;
 }
 
