--- a/src/shared/ui/Modal/styles.module.css
+++ b/src/shared/ui/Modal/styles.module.css
@@ -43,7 +43,7 @@
     flex-direction: column;
     gap: 15px;
     overflow-y: auto;
-    max-height: calc(100% - 92px);
+    height: calc(85vh - 92px);
     padding: 20px 0;
 }
 
@@ -57,6 +57,10 @@
     .modal {
         height: 70vh;
         width: 400px;
+    }
+
+    .modalBody {
+        height: calc(70vh - 92px);
     }
 
     .visible {
